try to fix requirements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
 [build-system]
 requires = [
+  "setuptools>=46.0",
   "jinja2",
   "pyserial",
 ]
@@ -23,6 +24,4 @@ classifiers = [
 keywords = ["python", "frangitron"]
 dynamic = ["version"]
 
-[build-system]
-requires = ["setuptools>=46.0"]
 build-backend = "setuptools.build_meta"
